# side-public

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.paper  README.md  docker-compose.paper.yml  grep_gates.sh  mirror.toml  pyproject.toml  skills-lock.json
.github/: dependabot.yml
config/: paper_slots.json
deploy/: side-mirror.service
docs/: strategy-research-report.md  v5.0_phase1_b_claim.md  v5.0_phase1_b_verdict.md  v5.1_tick_imbalance_claim.md  v5.1_tick_imbalance_verdict.md
research/: exchange-comparison.md  japan-asset-scan-results.md  kenzan-shikake-analysis.md  strategy-discovery-tools.md
risk/: __init__.py  engine.py
rust/side-cli/: Cargo.toml  build.rs
rust/side-cli/examples/: paper_v2_evidence_replay.rs
rust/side-cli/src/: main.rs
rust/side-cli/src/cmd/: backtest.rs  backtest_contract.rs  backtest_risk_adapter.rs  cross_report.rs  cross_report_4.rs  fetch.rs  mod.rs  paper.rs  phase76_power_check.rs  portfolio.rs  report.rs  risk_adapter.rs  risk_gate.rs  scan.rs  sign_forensics.rs  types.rs  wfd_rerun.rs
rust/side-cli/tests/: backtest_cli_test.rs  backtest_contract_test.rs  backtest_risk_adapter_test.rs  fee_sweep_test.rs  grid_subset_invariance.rs  paper_cli_test.rs  report_integration_test.rs  risk_adapter_test.rs  risk_gate_test.rs  scan_edges_test.rs  scan_pass_mode_test.rs  wfd_rerun_integration.rs
rust/side-engine/: Cargo.toml
rust/side-engine/examples/: bench_wfd.rs  combine_audusd_reports.rs  combine_audusd_retro_reports.rs
rust/side-engine/src/: backtest.rs  constants.rs  csv_loader.rs  edges.rs  events.rs  indicators.rs  lib.rs  main.rs  pair.rs  parquet_loader.rs  portfolio.rs  report.rs  sign_forensics.rs  strategies.rs  validation.rs  wfd.rs
rust/side-engine/src/fetcher/: aux.rs  cache.rs  dukascopy.rs  dukascopy_csv.rs  fred.rs  mirror.rs  mod.rs  types.rs  yahoo.rs
rust/side-engine/src/paper/: db.rs  mod.rs  position.rs  risk.rs
rust/side-engine/src/scanner/: macro_event.rs  metadata.rs  mod.rs  optimizer.rs  param_space.rs  robustness.rs
rust/side-engine/tests/: dukascopy_crypto_smoke.rs  ecb_event_smoke.rs  edge_parse_test.rs  events_2022_2023_dst.rs  fixture_hash_lock.rs  fomc_event_smoke.rs  macro_event_rayon_order.rs  macro_event_smoke.rs  news_blackout_test.rs  paper_config_test.rs  paper_db_test.rs  paper_e2e_test.rs  paper_position_test.rs  paper_risk_test.rs  paper_trader_test.rs  parquet_contract_test.rs  portfolio_integration_test.rs  regression.rs  slot_report_regime_fields.rs  timestamp_propagation_test.rs  tod_edge_test.rs  tod_spread_curve_test.rs  validation_test.rs  wfd_purged_test.rs
rust/side-engine/tests/fixtures/: FIXTURE_HASHES.txt  edges_minimal.json  edges_sample.json  slot_output_minimal.json  usdjpy_1h_sample.parquet
rust/side-mirror/: Cargo.toml
rust/side-mirror/benches/: parquet_read_bench.rs
rust/side-mirror/src/: config.rs  fetch.rs  main.rs
rust/side-mirror/src/cmd/: fetch.rs  mod.rs  serve.rs
rust/side-mirror/src/server/: mod.rs  parquet_reader.rs  state.rs
rust/side-mirror/src/server/handlers/: health.rs  meta.rs  mod.rs  ohlcv.rs
scripts/: analyze_btcusd_smoke.py  compare_usdjpy_regression.py  conftest.py  evaluate_risk_gate.py  fetch_ticks.py  fx_anomaly_research.py  fx_cross_asset_research.py  gen_regression_note.py  generate_backtest_risk_gate_closure_evidence.py  generate_backtest_runtime_accounting_parity_evidence.py  generate_backtest_v2_runtime_adoption_evidence.py  generate_paper_live_runtime_sizing_guards_evidence.py  generate_paper_v2_runtime_adoption_evidence.py  generate_risk_contract_drift_gate_evidence.py  generate_risk_contract_evidence.py  generate_risk_contract_v2_adoption_closure_audit.py  generate_risk_engine_closure_evidence.py  generate_risk_gate_closure_evidence.py  generate_scan_v2_runtime_adoption_evidence.py  poc_cluster_pair_analysis.py  portfolio_analysis.py  profit_visibility_costed_metrics.py  profit_visibility_e2e_report.py  profit_visibility_statistical_evaluator.py  render_no_go_map_md.py  run_btcusd_3mo_smoke.sh  test_phase15_xauusd_edges.py  trio_report_v4_8.py  v5_1_audit_traceability.py  v5_1_generate_imbalance_features.py  v5_1_is_backtest_fwer.py  v5_1_oos_verdict.py  v5_1_tick_data_contract_audit.py  v5_2_audit_closure.py  v5_2_claim_readiness.py  v5_2_microstructure_audit.py  v5_2_source_selection_audit.py  v5_2_tardis_ingest_smoke.py  v5_phase110_signal_is.py  v5_phase111_oos_verdict.py  (+5 more)
tests/: conftest.py  test_bq_resample.py  test_calendar_pipeline.py  test_evaluate_risk_gate.py  test_generate_backtest_risk_gate_closure_evidence.py  test_generate_backtest_runtime_accounting_parity_evidence.py  test_generate_backtest_v2_runtime_adoption_evidence.py  test_generate_paper_live_runtime_sizing_guards_evidence.py  test_generate_paper_v2_runtime_adoption_evidence.py  test_generate_risk_contract_evidence.py  test_generate_risk_contract_v2_adoption_closure_audit.py  test_generate_risk_engine_closure_evidence.py  test_generate_risk_gate_closure_evidence.py  test_generate_scan_v2_runtime_adoption_evidence.py  test_live_preflight_account_proof_projector.py  test_no_go_map.py  (+46 more)
(+220 files in other folders)
