[package]
name = "side-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "side"
path = "src/main.rs"

[dependencies]
side-engine = { path = "../side-engine" }
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio-cron-scheduler = "0.15"
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
regex = "1"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
