[package]
name = "side-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.12"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
ordered-float = "5"
lzma-rs = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"
csv = "1"
arrow = "58"
parquet = "58"
glob = "0.3"
statrs = "0.18"
rusqlite = { version = "0.40", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "side-engine"
path = "src/main.rs"

[[bin]]
name = "dump_parity_pf"
path = "src/bin/dump_parity_pf.rs"

[[bin]]
name = "dump_per_trade_log"
path = "src/bin/dump_per_trade_log.rs"

[[example]]
name = "bench_wfd"
