[package]
name = "side-mirror"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "side-mirror"
path = "src/main.rs"

[dependencies]
side-engine = { path = "../side-engine" }
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
arrow = "58"
parquet = { version = "58", features = ["async"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures = "0.3"

[[bench]]
name = "parquet_read_bench"
harness = false
